--- a/gameengine/pom.xml
+++ b/gameengine/pom.xml
@@ -9,11 +9,26 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>gameengine</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>gwt-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>resources</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
-        	<groupId>org.jbox2d</groupId>
-        	<artifactId>jbox2d-library</artifactId>
-        	<version>2.2.1.1</version>
+            <groupId>org.jbox2d</groupId>
+            <artifactId>jbox2d-library</artifactId>
+            <version>2.2.1.1</version>
         </dependency>
     </dependencies>
 </project>
