Enhanced GameComponer project structure

--- a/gamecomposer/pom.xml
+++ b/gamecomposer/pom.xml
@@ -16,6 +16,7 @@
                 <includes>
                     <include>**/*.fxml</include>
                     <include>**/*.properties</include>
+                    <include>**/*.css</include>
                 </includes>
             </resource>
             <resource>
