--- a/sampleplatformer/pom.xml
+++ b/sampleplatformer/pom.xml
@@ -15,5 +15,10 @@
         	<artifactId>gameengine-fxrenderer</artifactId>
         	<version>${project.version}</version>
         </dependency>
+        <dependency>
+        	<groupId>org.codehaus.jackson</groupId>
+        	<artifactId>jackson-mapper-lgpl</artifactId>
+        	<version>1.9.13</version>
+        </dependency>
     </dependencies>
 </project>
