Working on game object editor capabilities

--- a/gamecomposer/pom.xml
+++ b/gamecomposer/pom.xml
@@ -48,5 +48,10 @@
         	<artifactId>hibernate-validator</artifactId>
         	<version>4.3.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 </project>
