--- a/gameengine-fxrenderer/pom.xml
+++ b/gameengine-fxrenderer/pom.xml
@@ -9,6 +9,18 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>gameengine-fxrenderer</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>de.mirkosertic</groupId>
