--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.properties
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.properties
@@ -1,3 +1,7 @@
-menu.close=Close
+menu.file=File
+menu.close=Close Application
+menu.save=Save Game
+menu.new=New Game
+menu.open=Open Game
 objectinspector.title=Object inspector
 projectstructure.title=Project structure
