Added export menu for HTML5

--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.properties
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.properties
@@ -3,5 +3,7 @@ menu.close=Close Application
 menu.save=Save Game
 menu.new=New Game
 menu.open=Open Game
+menu.export=Export
+menu.exportashtml=Save and Export as HTML5
 objectinspector.title=Object inspector
 projectstructure.title=Project structure
