--- a/gamecomposer/pom.xml
+++ b/gamecomposer/pom.xml
@@ -9,6 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>gamecomposer</artifactId>
+    <name>GameComposer Game IDE</name>
     <build>
         <resources>
             <resource>
@@ -25,7 +26,33 @@
                     <include>**/*.*</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>${project.build.directory}/webruntime</directory>
+                <includes>
+                    <include>**/*.war</include>
+                </includes>
+            </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeTypes>war</includeTypes>
+                            <outputDirectory>${project.build.directory}/webruntime</outputDirectory>
+                            <stripVersion>true</stripVersion>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
     <dependencies>
         <dependency>
@@ -52,6 +79,21 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>javafx</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.mirkosertic</groupId>
+            <artifactId>gameengine-gwtrenderer</artifactId>
+            <type>war</type>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
