--- a/gameengine-fxrenderer/pom.xml
+++ b/gameengine-fxrenderer/pom.xml
@@ -9,6 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>gameengine-fxrenderer</artifactId>
+    <name>GameComposer JavaFX Renderer</name>
     <build>
         <plugins>
             <plugin>
@@ -25,7 +26,10 @@
         <dependency>
             <groupId>de.mirkosertic</groupId>
             <artifactId>gameengine</artifactId>
-            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>javafx</artifactId>
         </dependency>
     </dependencies>
 </project>
