--- a/gameengine-gwtrenderer/pom.xml
+++ b/gameengine-gwtrenderer/pom.xml
@@ -9,6 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>gameengine-gwtrenderer</artifactId>
+    <name>GameComposer GWT HTML5 Canvas Renderer</name>
     <packaging>war</packaging>
     <build>
         <plugins>
@@ -44,7 +45,6 @@
         <dependency>
             <groupId>de.mirkosertic</groupId>
             <artifactId>gameengine</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
