--- a/sampleplatformer/pom.xml
+++ b/sampleplatformer/pom.xml
@@ -9,11 +9,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>sampleplatformer</artifactId>
+    <name>GameComposer Example Game</name>
     <dependencies>
         <dependency>
         	<groupId>de.mirkosertic</groupId>
         	<artifactId>gameengine-fxrenderer</artifactId>
-        	<version>${project.version}</version>
         </dependency>
         <dependency>
         	<groupId>org.codehaus.jackson</groupId>
