Bug fixing sound api and event sheet serialization

--- a/gameengine-fxrenderer/pom.xml
+++ b/gameengine-fxrenderer/pom.xml
@@ -31,5 +31,10 @@
             <groupId>com.oracle</groupId>
             <artifactId>javafx</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>commons-io</groupId>
+        	<artifactId>commons-io</artifactId>
+        	<version>2.4</version>
+        </dependency>
     </dependencies>
 </project>
