Bug fixes of timing issues in physics subsystem, completed duke's adventure example game

--- a/sampleplatformer/pom.xml
+++ b/sampleplatformer/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <artifactId>sampleplatformer</artifactId>
     <name>GameComposer Example Game</name>
+    <packaging>pom</packaging>
     <dependencies>
         <dependency>
         	<groupId>de.mirkosertic</groupId>
