Removed list of scenes from game.json, as this can easily be retrieved from game directory structure.

--- a/gameengine-gwtrenderer/pom.xml
+++ b/gameengine-gwtrenderer/pom.xml
@@ -32,6 +32,8 @@
                     <disableCastChecking>true</disableCastChecking>
                     <enableClosureCompiler>true</enableClosureCompiler>
                     <disableClassMetaData>true</disableClassMetaData>
+                    <!--<style>DETAILED</style>
+                    <disableCastChecking>true</disableCastChecking>-->
                 </configuration>
             </plugin>
             <plugin>
