--- a/gameengine-gwtrenderer/pom.xml
+++ b/gameengine-gwtrenderer/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>gameengine</artifactId>
         </dependency>
         <dependency>
+            <groupId>parallax</groupId>
+            <artifactId>parallax</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
             <version>2.5.1</version>
