--- a/gameengine-gwtrenderer/pom.xml
+++ b/gameengine-gwtrenderer/pom.xml
@@ -52,9 +52,9 @@
             <artifactId>gameengine</artifactId>
         </dependency>
         <dependency>
-            <groupId>parallax</groupId>
-            <artifactId>parallax</artifactId>
-            <version>1.3</version>
+            <groupId>org.parallax3d</groupId>
+            <artifactId>parallax-library</artifactId>
+            <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
