--- a/gamecomposer/pom.xml
+++ b/gamecomposer/pom.xml
@@ -52,8 +52,28 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>2.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                            <goal>native</goal>
+                            <goal>web</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>de.mirkosertic.gamecomposer.GameComposerApplication</mainClass>
+                    <vendor>Mirko Sertic</vendor>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
     <dependencies>
         <dependency>
             <groupId>de.mirkosertic</groupId>
