--- a/gameengine-gwtrenderer/pom.xml
+++ b/gameengine-gwtrenderer/pom.xml
@@ -31,7 +31,7 @@
                     <optimizationLevel>9</optimizationLevel>
                     <disableCastChecking>true</disableCastChecking>
                     <enableClosureCompiler>true</enableClosureCompiler>
-                    <disableClassMetaData>true</disableClassMetaData>
+                    <!--<disableClassMetaData>true</disableClassMetaData>-->
                     <!--<style>DETAILED</style>
                     <disableCastChecking>true</disableCastChecking>-->
                 </configuration>
@@ -59,13 +59,13 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
-            <version>2.5.1</version>
+            <version>2.6.0-rc3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-servlet</artifactId>
-            <version>2.5.1</version>
+            <version>2.6.0-rc3</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
