--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.properties
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.properties
@@ -5,5 +5,6 @@ menu.new=New Game
 menu.open=Open Game
 menu.export=Export
 menu.exportashtml=Save and Export as HTML5
+menu.exportasandroid=Save and Export as Android App
 objectinspector.title=Object inspector
 projectstructure.title=Project structure
