--- a/gameengine-androidrenderer/AndroidManifest.xml
+++ b/gameengine-androidrenderer/AndroidManifest.xml
@@ -8,11 +8,13 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="16" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity android:name="de.mirkosertic.gameengine.android.GameEngineActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
