--- a/gameengine/pom.xml
+++ b/gameengine/pom.xml
@@ -53,5 +53,11 @@
             <artifactId>jbox2d-library</artifactId>
             <version>2.2.1.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
