Added snapshot repository

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,18 @@
         </dependencies>
     </dependencyManagement>
 
+    <repositories>
+        <repository>
+            <id>MogwaiRepository</id>
+            <url>http://mogwai.sourceforge.net/repository/maven2</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>ignore</checksumPolicy>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <build>
         <pluginManagement>
             <plugins>
