--- a/gameengine-fxrenderer/pom.xml
+++ b/gameengine-fxrenderer/pom.xml
@@ -16,8 +16,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <verbose>true</verbose>
                 </configuration>
             </plugin>
         </plugins>
@@ -26,10 +27,6 @@
         <dependency>
             <groupId>de.mirkosertic</groupId>
             <artifactId>gameengine</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>javafx</artifactId>
         </dependency>
         <dependency>
         	<groupId>commons-io</groupId>
