--- a/pom.xml
+++ b/pom.xml
@@ -43,13 +43,6 @@
                 <version>${project.version}</version>
                 <type>apk</type>
             </dependency>
-            <dependency>
-                <groupId>com.oracle</groupId>
-                <artifactId>javafx</artifactId>
-                <version>2.2</version>
-                <systemPath>${java.home}/lib/jfxrt.jar</systemPath>
-                <scope>system</scope>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -60,6 +53,21 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.3.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>gwt-maven-plugin</artifactId>
+                    <version>2.6.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.zenjava</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>8.1.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.2.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
