Added identifier for better JavaFX packaging

--- a/gamecomposer/pom.xml
+++ b/gamecomposer/pom.xml
@@ -92,6 +92,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <identifier>FXGameComposer</identifier>
                     <mainClass>de.mirkosertic.gamecomposer.GameComposerApplication</mainClass>
                     <vendor>Mirko Sertic</vendor>
                     <vendor>Mirko Sertic</vendor>
