--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>gameengine</module>
         <module>gameengine-fxrenderer</module>
         <module>gameengine-gwtrenderer</module>
+        <module>gameengine-dragomerenderer</module>
         <module>gameengine-androidrenderer</module>
         <module>gamecomposer</module>
         <module>examples</module>
