--- a/gameengine-dragomerenderer/pom.xml
+++ b/gameengine-dragomerenderer/pom.xml
@@ -7,7 +7,7 @@
         <version>0.2-SNAPSHOT</version>
     </parent>
     <artifactId>gameengine-dragomerenderer</artifactId>
-    <name>GameComposer Dragome HTML5 Canvas Renderer</name>
+    <name>GameComposer Dragome Renderer</name>
     <packaging>war</packaging>
 
     <repositories>
@@ -42,7 +42,6 @@
     </dependencies>
 
     <build>
-        <finalName>artifact</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -52,50 +51,30 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-
             <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.1.3.v20140225</version>
+                <groupId>com.dragome</groupId>
+                <artifactId>dragome-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>compileclient</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <webApp>
-                        <defaultsDescriptor>${basedir}/src/main/resources/webdefault.xml</defaultsDescriptor>
-                        <contextPath>/artifact</contextPath>
-                    </webApp>
-                    <classesDirectory>${basedir}/src/main/webapp/WEB-INF/classes</classesDirectory>
-                    <webAppSourceDirectory>${basedir}/src/main/webapp</webAppSourceDirectory>
-                    <connectors>
-                        <connector implementation="org.eclipse.jetty.server.ServerConnector">
-                            <port>8080</port>
-                            <maxIdleTime>7000000</maxIdleTime>
-                        </connector>
-                    </connectors>
+                    <destinationDirectory>${project.build.directory}/${project.build.finalName}</destinationDirectory>
+                    <forceRebuild>true</forceRebuild>
+                    <removeCache>false</removeCache>
                 </configuration>
-
                 <dependencies>
                     <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm</artifactId>
-                        <version>5.0.2</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm-commons</artifactId>
-                        <version>5.0.2</version>
+                        <groupId>de.mirkosertic</groupId>
+                        <artifactId>gameengine-dragomerenderer</artifactId>
+                        <version>${project.version}</version>
                     </dependency>
                 </dependencies>
-
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <port>8081</port>
-                </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
