Integrated Dragome Export into GameComposer IDE

--- a/gamecomposer/pom.xml
+++ b/gamecomposer/pom.xml
@@ -162,6 +162,12 @@
         </dependency>
         <dependency>
             <groupId>de.mirkosertic</groupId>
+            <artifactId>gameengine-dragomerenderer</artifactId>
+            <type>war</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.mirkosertic</groupId>
             <artifactId>gameengine-androidrenderer</artifactId>
             <type>apk</type>
             <scope>provided</scope>
