--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.properties
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.properties
@@ -4,7 +4,8 @@ menu.save=Save Game
 menu.new=New Game
 menu.open=Open Game
 menu.export=Export
-menu.exportashtml=Save and Export as HTML5
+menu.exportashtmlgwt=Save and Export as HTML5(GWT)
+menu.exportashtmldragome=Save and Export as HTML5(Dragome)
 menu.exportasandroid=Save and Export as Android App
 objectinspector.title=Object inspector
 projectstructure.title=Project structure
