Fixed unwanted cache file

--- a/gameengine-dragomerenderer/pom.xml
+++ b/gameengine-dragomerenderer/pom.xml
@@ -65,7 +65,7 @@
                 <configuration>
                     <destinationDirectory>${project.build.directory}/${project.build.finalName}</destinationDirectory>
                     <forceRebuild>true</forceRebuild>
-                    <removeCache>false</removeCache>
+                    <removeCache>true</removeCache>
                 </configuration>
                 <dependencies>
                     <dependency>
