--- a/gameengine-teavmrenderer/pom.xml
+++ b/gameengine-teavmrenderer/pom.xml
@@ -49,6 +49,13 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -57,8 +64,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
@@ -92,7 +99,7 @@
                             <runtime>SEPARATE</runtime>
                             <!-- Whether TeaVM should produce minified JavaScript. Can reduce JavaScript file size more than
                                  two times -->
-                            <minifying>true</minifying>
+                            <minifying>false</minifying>
                             <!-- Whether TeaVM should produce debug information for its built-in debugger -->
                             <debugInformationGenerated>true</debugInformationGenerated>
                             <!-- Whether TeaVM should produce source maps file -->
