--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <name>GameComposer Parent POM</name>
 
     <modules>
+        <module>gameengine-apt</module>
         <module>gameengine</module>
         <module>gameengine-fxrenderer</module>
         <module>gameengine-gwtrenderer</module>
@@ -23,6 +24,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>de.mirkosertic</groupId>
+                <artifactId>gameengine-apt</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>de.mirkosertic</groupId>
                 <artifactId>gameengine</artifactId>
