Finished LUA integration for TeaVM and GWT.

--- a/gameengine-gwtrenderer/pom.xml
+++ b/gameengine-gwtrenderer/pom.xml
@@ -36,8 +36,8 @@
                     <disableCastChecking>true</disableCastChecking>
                     <enableClosureCompiler>false</enableClosureCompiler>
                     <!--<disableClassMetaData>true</disableClassMetaData>-->
-                    <!--<style>DETAILED</style>
-                    <disableCastChecking>true</disableCastChecking>-->
+                    <style>DETAILED</style>
+                    <!--<disableCastChecking>true</disableCastChecking>-->
                 </configuration>
                 <dependencies>
                     <dependency>
