--- a/gameengine-dragomerenderer/pom.xml
+++ b/gameengine-dragomerenderer/pom.xml
@@ -28,6 +28,14 @@
       <artifactId>gameengine</artifactId>
     </dependency>
     <dependency>
+      <groupId>de.mirkosertic</groupId>
+      <artifactId>gameengine-jbox2d</artifactId>
+    </dependency>
+      <dependency>
+          <groupId>de.mirkosertic</groupId>
+          <artifactId>gameengine-lua</artifactId>
+      </dependency>
+    <dependency>
       <groupId>com.dragome</groupId>
       <artifactId>dragome-js-commons</artifactId>
       <version>0.95.2-beta1</version>
